--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,6 +18,7 @@
   --ifm-navbar-background-color: #ffffff;
   --ifm-navbar-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
   --ifm-navbar-link-hover-color: #3578e5;
+  --ifm-navbar-height: 80px;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -41,6 +42,11 @@
   justify-content: center;
   padding: 0 20px;
   border-bottom: none;
+}
+
+/* Увеличиваем отступ для основного контента */
+.main-wrapper {
+  margin-top: 10px; /* Дополнительный отступ сверху */
 }
 
 [data-theme='dark'] .navbar {
